--- a/overlay-modal-practice/14c.css
+++ b/overlay-modal-practice/14c.css
@@ -12,7 +12,7 @@ body {
         color: white;
 }
 
-.overlay {
+.overlay2 {
     display: flex; 
         position: fixed;
         background-color: rgb(0, 0, 0, 0.5);
@@ -24,7 +24,7 @@ body {
          align-items: center;
 }
 
-.modal {
+.modal2 {
     border: solid;
     width: 250px;
     background-color: white;
@@ -35,7 +35,7 @@ body {
     padding-left: 10px;
 }
 
-.modal-title {
+.modal-title2 {
     font-size: 22px;
     font-size: 22px;
     font-weight: bold;
